vlib/v/checker/tests/bool_string_cast_err.vv
fn main() {
    println(string(true))
    println(string(false))
}
